# nalgebra-sparse-linalg

./: Cargo.toml  readme.md
.github/workflows/: ci.yml
benches/: benchmark_iteratives.rs
examples/: test_amg_optimizations.rs
src/: lib.rs  svd.rs
src/iteratives/: biconjugate_gradient.rs  conjugate_gradient.rs  gauss_seidel.rs  jacobi.rs  mod.rs  relaxation.rs
src/iteratives/amg/: coarsen.rs  graph.rs  interpolate.rs  level.rs  mod.rs  restrict.rs
src/preconditioners/: mod.rs
tests/: iterative_solvers.rs
