[package]
name = "nalgebra-sparse-linalg"
description = "Sparse linear algebra library for Rust using nalgebra"
authors = ["Dimitri Timoz <dimitri.timoz@protonmail.com>"]
license = "MIT"
version = "0.1.2"
edition = "2024"

[lib]

[dependencies]
log = "0.4.27"
nalgebra-sparse = "0.10"

[dev-dependencies]
criterion = { version = "0.5" }
rand = { version = "0.9" }

[[bench]]
name = "benchmark_iteratives"
harness = false
